project/apps/network-policies/postgres/00-default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: postgres-default-deny
  namespace: postgres
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
