project/apps/network-policies/postgres/02-allow-authentik-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: postgres-allow-authentik-ingress
  namespace: postgres
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: postgresql
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: authentik
          podSelector:
            matchLabels:
              app.kubernetes.io/name: authentik
      ports:
        - protocol: TCP
          port: 5432
