project/apps/network-policies/postgres/04-allow-prometheus-scrape-exporter.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: postgres-exporter-allow-prometheus-scrape
  namespace: postgres
spec:
  podSelector:
    matchExpressions:
      - key: app.kubernetes.io/name
        operator: In
        values:
          - prometheus-postgres-exporter
          - postgres-exporter
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: monitoring
          podSelector:
            matchExpressions:
              - key: app.kubernetes.io/name
                operator: In
                values:
                  - prometheus
                  - kube-prometheus-stack-prometheus
      ports:
        - protocol: TCP
          port: 9187
